Logic Correction 2